syntax= "proto3";

package pb;

option go_package = "./pkg/pb";

service MethodService {
    rpc ListUsers (MethodReq) returns (MethodRes){}
}

service UserService {
    rpc Users (MethodReq) returns (MethodRes){}
}

message User {
    uint32 ID=1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone  = 5;
}

message MethodReq {
    int32 method=1;
    int32 waitTime=2;
}

message MethodRes {
    int32 status=1;
    repeated User user=2;
}